added plugin for module
added plugin for module